...
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Title_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/note_title_hint"
...
        app:layout_constraintEnd_toEndOf="@+id/spinner_id"
        app:layout_constraintStart_toStartOf="@+id/spinner_id"
        app:layout_constraintTop_toBottomOf="@+id/spinner_id"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Note_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/note_text_hint"
...
